# Compiler2025-SysY

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  alltime  dif  list
antlr/: README.md  SysY.g4  SysY.interp  SysY.tokens  SysYBaseListener.cpp  SysYBaseListener.h  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYListener.cpp  SysYListener.h  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h  antlr4_install.sh  sysY_EBNF.txt
include/: SysYIRGenerator.hpp
include/IR/: AST2IR.hpp  BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IR.hpp  IRBuilder.hpp  IRPrinter.hpp  Instruction.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp
include/antlr/: SysYBaseVisitor.h  SysYLexer.h  SysYParser.h  SysYVisitor.h
include/ast/: Antlr2Ast.hpp  Ast.hpp  EmptyAntlrVisitor.hpp  README.md  Tensor.hpp  Type.hpp
include/codegen/: ARM_codegen.hpp  BarrierLock.hpp  BlockLayout.hpp  CodeGen.hpp  GraphColoring.hpp  InterfereGraph.hpp  LiveMessage.hpp  MachineDominator.hpp  MachineLoopDetection.hpp  RegSpill.hpp  RegisterAllocate.hpp
include/ir/: AST2IR.hpp  BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  IRPrinter.hpp  Instruction.hpp  InstructionList.hpp  Module.hpp  README.md  Value.hpp
include/ir/ir/: BasicBlock.hpp  GlobalVariable.hpp  InstructionList.hpp
include/ir/pass/: ConstGlobalEliminate.hpp  GCM.hpp  GlobalArrayReverse.hpp  LoopRotate.hpp  LoopSimplify.hpp  PhiEliminate.hpp  README.md
include/ir/util/: IRPrinter.hpp
include/machineir/: CmpCombine.hpp  CriticalEdgeRemove.hpp  InstructionSelect.hpp  MachineBasicBlock.hpp  MachineFunction.hpp  MachineIR.hpp  MachineInstruction.hpp  MachineModule.hpp  MachineOperand.hpp  MachinePassManager.hpp
include/machineir/machineir/: MachineFunction.hpp  MachineOperand.hpp
include/machineir/pass/: CleanCode.hpp  CodeGen.hpp  FrameOffset.hpp  LoadStoreEliminate.hpp  RegPrefill.hpp  (+2 more)
include/passes/: Arithmetic.hpp  BBRank.hpp  ConstGlobalEliminate.hpp  DeadCode.hpp  Dominators.hpp  FuncInfo.hpp  GCM.hpp  GVN.hpp  GetElementSplit.hpp  GlobalArrayReverse.hpp  Inline.hpp  LCSSA.hpp  LICM.hpp  LocalConstGlobalMatching.hpp  LoopDetection.hpp  LoopRotate.hpp  LoopSimplify.hpp  Mem2Reg.hpp  PassManager.hpp  Print.hpp  SCCP.hpp  SignalSpread.hpp
include/util/: CodeString.hpp  Color.hpp  Config.hpp  CountLZ.hpp  DynamicBitset.hpp  README.md  SequencePairCache.hpp  System.hpp  Tensor.hpp  Type.hpp  Util.hpp
lib/: sylib.c  sylib.c1  sylib.h  sylib.h1
src/: SysYIRGenerator.cpp  compiler.cpp  main.cpp
src/IR/: AST2IR.cpp  BasicBlock.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/antlr/: SysYLexer.cpp  SysYParser.cpp
src/ast/: Antlr2Ast.cpp  Ast.cpp  EmptyAntlrVisitor.cpp  System.cpp  Tensor.cpp  Type.cpp  main.cpp
src/codegen/: ARM_codegen.cpp  BlockLayout.cpp  CleanCode.cpp  CodeGen.cpp  FrameOffset.cpp  GraphColoring.cpp  InterfereGraph.cpp  LiveMessage.cpp  LoadStoreEliminate.cpp  MachineDominator.cpp  MachineLoopDetection.cpp  RegPrefill.cpp  RegSpill.cpp  RegisterAllocate.cpp  RemoveEmptyBlocks.cpp  ReturnMerge.cpp
src/ir/: AST2IR.cpp  BasicBlock.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRPrinter.cpp  Instruction.cpp  InstructionList.cpp  Module.cpp  Value.cpp  main.cpp
src/machineir/: CmpCombine.cpp  CriticalEdgeRemove.cpp  IR2MIR.cpp  InstructionSelect.cpp  MachineBasicBlock.cpp  MachineFunction.cpp  MachineIR.cpp  MachineInstruction.cpp  MachineModule.cpp  MachineOperand.cpp
src/passes/: Arithmetic.cpp  BBRank.cpp  BarrierLock.cpp  CallChain.cpp  ConstGlobalEliminate.cpp  DeadCode.cpp  Dominators.cpp  FuncInfo.cpp  GCM.cpp  GVN.cpp  GlobalArrayReverse.cpp  Inline.cpp  LCSSA.cpp  LICM.cpp  LocalConstGlobalMatching.cpp  LoopDetection.cpp  LoopRotate.cpp  LoopSimplify.cpp  Mem2Reg.cpp  Print.cpp  SCCP.cpp  SignalSpread.cpp  main.cpp
src/util/: CodeString.cpp  Color.cpp  Config.cpp  DynamicBitset.cpp  System.cpp  Tensor.cpp  Type.cpp
tests/: README.md  astTest.sh  codegenO1Test.sh  codegenTest.sh  codegen_check.sh  compileLib.sh  compileTest.sh  irTest.sh  passesTest.sh  test.cpp  test1.cpp
tests/special/: licm_bad.sy  old_ir_wrong.sy
(+37 files in other folders)
